# ocean

./: .gitmodules  CMakeLists.txt
incl/: base.h  camera.h  ocean.h  util.h
src/: camera.cpp  main.cpp  ocean.cpp  util.cpp
